--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
                 </picture>
             </a>
             <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="about.html">Location</a></li>
+                <ul class="nav__list nav__list--2">
+                    <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
     <main>
         <h1 class="visually-hidden">scooterchilar</h1>
         <div class="hero">
-            <div class="container hero__container">
+        <div class="container hero__container">
                 <div class="hero__content">
                     <p class="hero__scooter">Scooter sharing made simple</p>
                     <p class="hero__text">Scoot takes the hassle out of urban mobility. Our bikes are placed in
@@ -83,8 +83,10 @@
                             <a class="section__links" href="#">Learn More</a>
                         </div>
                         <picture>
+                            <source type="image/webp" media="(max-width: 573px)" srcset="img/telephone-mobile.webp">
                             <source media="(max-width: 573px)"
                             srcset="img/telephone-mobile.jpg 1x, img/telefon@2x.jpg 2x">
+                            <source type="image/webp" srcset="img/telephone-desktop.webp">
                             <img class="section__img" src="./img/telephone-desktop.jpg"
                                 srcset="img/telephone-desktop.jpg 1x, img/telephone-desk@2x.jpg 2x" alt="telephone">
                         </picture>
@@ -98,8 +100,10 @@
                             <a class="section__links" href="#">Learn More</a>
                         </div>
                         <picture>
+                            <source type="image/webp" media="(max-width: 573px)" srcset="img/manzara-mobile.webp">
                             <source media="(max-width: 573px)"
                                 srcset="img/manzara-mobile.jpg 1x, img/manzara-mobile@2x.jpg 2x">
+                                <source type="image/webp" srcset="img/manzara.webp">
                             <img class="section__img" src="./img/manzara.jpg"
                                 srcset="img/manzara.jpg 1x, img/manzara@2x.jpg 2x" alt="">
                         </picture>
@@ -113,8 +117,10 @@
                             <a class="section__links" href="#">Learn More</a>
                         </div>
                         <picture>
+                            <source type="image/webp" media="(max-width: 573px)" srcset="img/xamyon-mobile.webp">
                             <source media="(max-width: 573px)"
                                 srcset="img/xamyon-mobile.jpg 1x, img/hamyon-mobile@2x.jpg 2x">
+                                <source type="image/webp" srcset="img/xamyon.webp">
                             <img class="section__img" src="./img/xamyon.jpg"
                                 srcset="img/xamyon.jpg 1x, img/xamyon@2x.jpg 2x" alt="">
                         </picture>
@@ -128,16 +134,20 @@
                 <div class="intro__wrapper">
                     <a href="#">
                         <picture>
+                            <source type="image/webp" media="(max-width: 1105px)" srcset="img/appstore-tablet.webp">
                             <source media="(max-width: 1105px)"
                                 srcset="img/appstore-tablet.png 1x, img/appstore-tablet@2x.png 2x">
+                                <source type="image/webp" src="img/appstore.webp">
                             <img class="intro__img" src="./img/appstore.png"
                                 srcset="img/appstore.png 1x, img/appstore@2x.png 2x" alt="">
                         </picture>
                     </a>
                     <a href="#">
                         <picture>
+                            <source type="image/webp" media="(max-width: 1105px)" srcset="img/google-tablet.webp">
                             <source media="(max-width: 1105px)"
                                 srcset="img/google-tablet.png 1x, img/google-tablet@2x.png 2x">
+                                <source type="image/webp" srcset="img/google-play.webp">
                             <img class="intro__img" src="./img/google-play.png"
                                 srcset="img/google-play.png 1x, img/google-play@2x.png 2x" alt="">
                         </picture>
@@ -150,19 +160,18 @@
         <div class="container footer__container">
             <a class="footer__logo" href="#"><img src="./img/icon-footer.svg" alt=""></a>
             <nav class="nav nav--2">
-                <ul class="nav__list">
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="about.html">Location</a></li>
+                <ul class="nav__list nav__list--2">
+                    <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
             <ul class="footer__nav-list">
-                <li class="footer__nav-list-item"><a href="#"><img src="./img/facebook.png"
-                            srcset="img/facebook.png 1x, img/facebook@2x.png 2x" alt=""></a></li>
-                <li class="footer__nav-list-item"><a href="#"><img src="./img/twitter.png"
-                            srcset="img/twitter.png 1x, img/twitter@2x.png 2x" alt=""></a></li>
-                <li class="footer__nav-list-item"><a href="#"><img src="./img/instagram.png"
-                            srcset="img/instagram.png 1x, img/instagram@2x.png 2x" alt=""></a></li>
+                <li class="footer__nav-list-item"><a href="#"><img src="./img/facebook.svg" alt=""></a></li>
+                <li class="footer__nav-list-item"><a href="#"><svg class="footer__svg-img" width="24" height="20">
+                    <use xlink:href="#twitter"></use>
+                </svg></a></li>
+                <li class="footer__nav-list-item"><a href="#"><img src="./img/instagram.svg" alt=""></a></li>
             </ul>
         </div>
     </footer>
