--- a/src/index.html
+++ b/src/index.html
@@ -167,11 +167,15 @@
                 </ul>
             </nav>
             <ul class="footer__nav-list">
-                <li class="footer__nav-list-item"><a href="#"><img src="./img/facebook.svg" alt=""></a></li>
+                <li class="footer__nav-list-item"><a href="#"><svg class="footer__svg-img" width="24" height="24">
+                    <use xlink:href="#facebook"></use>
+                </svg></a></li>
                 <li class="footer__nav-list-item"><a href="#"><svg class="footer__svg-img" width="24" height="20">
                     <use xlink:href="#twitter"></use>
                 </svg></a></li>
-                <li class="footer__nav-list-item"><a href="#"><img src="./img/instagram.svg" alt=""></a></li>
+                <li class="footer__nav-list-item"><a href="#"><svg class="footer__svg-img" width="24" height="24">
+                    <use xlink:href="#instagram"></use>
+                </svg></a></li>
             </ul>
         </div>
     </footer>
