--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="c">
     <div style="display: none;">
         <include src="dist/img/sprite.svg"></include>
     </div>
@@ -190,7 +190,7 @@
         <div class="container footer__container">
             <a href="index.html"><img class="footer__logo" src="./img/icon-footer.svg" alt=""></a>
             <nav class="nav nav--2">
-                <ul class="nav__list nav__list--2">
+                <ul class="nav__list2">
                     <li class="nav__list-item"><a class="nav__list-link" href="#">About</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
