--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
         <div class="container footer__container">
             <a class="footer__logo" href="#"><img src="./img/icon-footer.svg" alt=""></a>
             <nav class="nav nav--2">
-                <ul class="nav__list nav__list--2">
+                <ul class="nav__list2">
                     <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
