--- a/src/about.html
+++ b/src/about.html
@@ -27,7 +27,7 @@
                 <ul class="nav__list">
                     <li class="nav__list-item"><a class="nav__list-link"
                             href="about.html">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="Location.html">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
@@ -153,7 +153,7 @@
                             </button>
                             <p class="faqs__text">Can I find a nearby Scoots?</p>
                             <p class="faqs__text">Do I need a license to ride?</p>
-                        </di
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -191,8 +191,8 @@
             <a href="index.html"><img class="footer__logo" src="./img/icon-footer.svg" alt=""></a>
             <nav class="nav nav--2">
                 <ul class="nav__list2">
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="Location.html">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
