--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <nav class="nav">
                 <ul class="nav__list nav__list--2">
                     <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="Location.html">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
@@ -49,7 +49,7 @@
 
         <section class="wrapper">
             <div class="container">
-                <ul class="wrapper__list">
+                <ol class="wrapper__list">
                     <li class="wrapper__list-item wrapper__list-item1">
                         <h3 class="wrapper__title">Locate with app</h3>
                         <p class="wrapper__item-text">Use the app to find the nearest scooter to you. We are
@@ -67,7 +67,7 @@
                             put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility
                             ramps.</p>
                     </li>
-                </ul>
+                </ol>
             </div>
         </section>
 
@@ -117,7 +117,7 @@
                             <a class="section__links" href="#">Learn More</a>
                         </div>
                         <picture>
-                            <source type="image/webp" media="(max-width: 573px)" srcset="img/xamyon-mobile.webp">
+                            <source type="image/webp" media="(max-width: 573px)" srcset="img/hamyon-mobile.webp">
                             <source media="(max-width: 573px)"
                                 srcset="img/xamyon-mobile.jpg 1x, img/hamyon-mobile@2x.jpg 2x">
                                 <source type="image/webp" srcset="img/xamyon.webp">
@@ -162,7 +162,7 @@
             <nav class="nav nav--2">
                 <ul class="nav__list2">
                     <li class="nav__list-item"><a class="nav__list-link" href="about.html">About</a></li>
-                    <li class="nav__list-item"><a class="nav__list-link" href="#">Location</a></li>
+                    <li class="nav__list-item"><a class="nav__list-link" href="Location.html">Location</a></li>
                     <li class="nav__list-item"><a class="nav__list-link" href="#">Careers</a></li>
                 </ul>
             </nav>
@@ -172,6 +172,7 @@
                 <li class="footer__nav-list-item"><a href="#"><img src="./img/twitter.svg" alt=""></a></li>
             </ul>
         </div>
+        
     </footer>
     <script src="./js/main.js"></script>
 </body>
