Added text to h1

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <h1 class="visually-hidden">scooterchilar</h1>
+        <h1 class="visually-hidden">scooterchilar maket</h1>
         <div class="hero">
         <div class="container hero__container">
                 <div class="hero__content">
